fix issue with status bar cutting off buttons and page content on clean themes

--- a/src/freenet/clients/http/staticfiles/themes/clean/theme.css
+++ b/src/freenet/clients/http/staticfiles/themes/clean/theme.css
@@ -52,7 +52,7 @@ form {
 /* body and page header */
 
 body {
-	margin: 0;
+	margin: 0 0 2em 0;
 	padding: 0;
 	background-color: #f0f0f0;
 }
